<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/login_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="@drawable/logincardback"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="@dimen/margin_padding_15"
            android:orientation="vertical"
            android:layout_height="300dp">


            <LinearLayout
                android:id="@+id/lay_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_padding_20"
                android:layout_marginEnd="@dimen/margin_padding_20">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lay_mob"
                    android:layout_marginLeft="@dimen/margin_padding_5"
                    android:layout_marginRight="@dimen/margin_padding_5"
                    android:padding="5dp"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/login_edittext"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/vec_username" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="32dp"
                        android:background="#ffffff" />

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:background="@android:color/transparent"
                        android:hint="@string/username" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lay_password"
                    android:layout_marginLeft="@dimen/margin_padding_5"
                    android:layout_marginRight="@dimen/margin_padding_5"
                    android:padding="5dp"
                    android:layout_marginTop="@dimen/margin_padding_10"
                    android:background="@drawable/login_edittext"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/vec_password" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="32dp"
                        android:background="#ffffff" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:singleLine="true"
                        android:background="@android:color/transparent"
                        android:hint="@string/password" />

                </LinearLayout>


                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/lay_for_pass"
                    android:layout_marginTop="@dimen/margin_padding_10"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Forgot "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/primary"
                        android:text="Password?"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>


            <Button
                android:layout_marginTop="@dimen/margin_padding_15"
                android:id="@+id/btn_SignIn"
                android:layout_width="150dp"
                android:background="@drawable/btn_back"
                android:textColor="@color/white"
                android:layout_height="50dp"
                android:text="@string/login" />


            <LinearLayout
                android:id="@+id/lay_new_user"
                android:layout_marginTop="@dimen/margin_padding_10"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="New User ? "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/primary"
                    android:text="@string/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>



</FrameLayout>